--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     </ion-content>
     <ion-footer>
       <ion-toolbar>
-        <ion-menu-toggle (click)="onClick()">
+        <ion-menu-toggle (click)="logout()">
           <ion-item detail="true">
             <ion-icon slot="start" name="log-out-outline"></ion-icon>
             Cerrar Sesion
